--- a/static/core/articlelayout.css
+++ b/static/core/articlelayout.css
@@ -215,8 +215,8 @@
 .aboutsec button {
     font-family: CrimsonPro;
     font-size: 0.9rem;
-    color: #ff0000;
-    background: #000;
+    color: #000000;
+    background: #ff0000;
     border: #b8b8b8 1px solid;
     border-radius: 4px;
     padding: 0.7rem 3rem;
