--- a/static/core/articlelayout.css
+++ b/static/core/articlelayout.css
@@ -217,7 +217,7 @@
     font-size: 0.9rem;
     font-weight: bold;
     color: #000000;
-    background: #00ff40;
+    background: #0fc43c;
     border: #b8b8b8 1px solid;
     border-radius: 4px;
     padding: 0.7rem 3rem;
