--- a/core/templates/core/blog.html
+++ b/core/templates/core/blog.html
@@ -55,12 +55,14 @@
 <a  href="{% url 'core:index' %}">HOME</a>
 <a id="menuactive">BLOG</a>
 <a href="{% url 'core:podcast' %}">PODCAST</a>
+<a href="#">SHOP</a>
 {% endblock navmenu %}
 
 {% block mobilemenu %}
 <a href="{% url 'core:index' %}">HOME</a>
 <a href="#">BLOG</a>
 <a href="{% url 'core:podcast' %}">PODCAST</a>
+<a href="#">SHOP</a>
 {% endblock mobilemenu %}
 
 {% block page %}
