--- a/core/templates/core/articlelayout.html
+++ b/core/templates/core/articlelayout.html
@@ -32,12 +32,14 @@
 <a href="{% url 'core:index' %}">HOME</a>
 <a href="{% url 'core:blog' %}">BLOG</a>
 <a href="{% url 'core:podcast' %}">PODCAST</a>
+<a href="#">SHOP</a>
 {% endblock navmenu %}
 
 {% block mobilemenu %}
 <a href="{% url 'core:index' %}">HOME</a>
 <a href="{% url 'core:blog' %}">BLOG</a>
 <a href="{% url 'core:podcast' %}">PODCAST</a>
+<a href="#">SHOP</a>
 {% endblock mobilemenu %}
 
 {% block page %}
