--- a/core/templates/core/podcast.html
+++ b/core/templates/core/podcast.html
@@ -12,12 +12,14 @@
 <a href="{% url 'core:index' %}" >HOME</a>
 <a href="{% url 'core:blog' %}">BLOG</a>
 <a id="menuactive">PODCAST</a>
+<a href="#">SHOP</a>
 {% endblock navmenu %}
 
 {% block mobilemenu %}
 <a href="{% url 'core:index' %}" >HOME</a>
 <a href="{% url 'core:blog' %}">BLOG</a>
 <a href="#">PODCAST</a>
+<a href="#">SHOP</a>
 {% endblock mobilemenu %}
 
 {% block page %}
