--- a/static/core/articlelayout.css
+++ b/static/core/articlelayout.css
@@ -217,8 +217,9 @@
     font-size: 0.9rem;
     font-weight: bold;
     color: #000000;
-    background: #008000cc;
-    border: #b8b8b8 1px solid;
+    background: #44bb44;
+    border: none;
+    /* border: #b8b8b8 1px solid; */
     border-radius: 4px;
     padding: 0.7rem 3rem;
     cursor: pointer;
