--- a/core/templates/core/articlelayout.html
+++ b/core/templates/core/articlelayout.html
@@ -51,7 +51,7 @@
             {% else %}
             <img src="{{ article.featureimage.url }}" alt="{{ article.title }}" height="720" width="480" style="height: auto; width: 100%; object-fit: cover;">
             {% endif %}
-            <div class="meta" style="background-color: #ffca52;">
+            <div class="meta" style="background: #86baaf;">
                 <a href="{% url 'core:blog' %}" style="text-decoration: none;">
                     <p style="color: #000; font-family: CrimsonPro; font-size:48px; font-weight: bold; text-align: center; line-height: 1rem;">A-Z LOGS</p>
                 </a>
