--- a/core/static/core/blog.css
+++ b/core/static/core/blog.css
@@ -33,7 +33,7 @@
 }
 .articlediv {
     filter: grayscale();
-    transition: 300ms;
+    transition: 1s;
 }
 .articlediv:hover {
     filter: none;
@@ -48,9 +48,24 @@
     grid-gap: 10px;
     cursor: pointer;
 }
-#blogs .blogimage {
+.image {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    object-position: center;
+    aspect-ratio: 3 / 2;
+    overflow: hidden;
+}
+.blogimage {
     width: 100%;
     height: 100%;
+}
+.image .blogimage {
+    transform: scale(1);
+    transition: 1s ease-in-out;
+}
+.image:hover .blogimage {
+    transform: scale(1.4);
 }
 .blogmeta {
     margin: 2% 0% 0% 0%;
