--- a/core/templates/core/homepage.html
+++ b/core/templates/core/homepage.html
@@ -79,8 +79,8 @@
                         {% endif %}
                     </div>
                     
-                    <!-- <div id="imagediv">
-                        <img id="image" src="{% static 'core/media/lbwhite.png' %}" alt="leroy">
+                    <!-- <div class="image">
+                        <img src="{% static 'core/media/lbwhite.png' %}" alt="leroy">
                     </div> -->
                     
                     <!-- <div id="id01" class="modal">
