--- a/core/static/core/podcast.css
+++ b/core/static/core/podcast.css
@@ -100,6 +100,9 @@ body {
 /* Footer */
 
 footer {
+    position: relative;
+    bottom: 0;
+    width: 100%;
     border-top: 1px solid silver;
     display: flex;
     flex-direction: row;
