--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -10,7 +10,7 @@
         {% endblock head %}
         <link rel="stylesheet" href="{% static 'core/base.css' %}"/>
         <script src="{% static 'core/main.js' %}"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
         <script type="application/ld+json">
             {
                 "@context": "https://schema.org",
