--- a/core/templates/core/blog.html
+++ b/core/templates/core/blog.html
@@ -52,17 +52,31 @@
 {% endblock head %}
 
 {% block navmenu %}
-<a  href="{% url 'core:index' %}">HOME</a>
+<!-- <a  href="{% url 'core:index' %}">HOME</a> -->
 <a id="menuactive">BLOG</a>
 <a href="{% url 'core:podcast' %}">PODCAST</a>
 <a href="#">SHOP</a>
 {% endblock navmenu %}
 
 {% block mobilemenu %}
-<a href="{% url 'core:index' %}">HOME</a>
-<a href="#">BLOG</a>
-<a href="{% url 'core:podcast' %}">PODCAST</a>
-<a href="#">SHOP</a>
+<a href="#">
+    <div class="mobile-menu-item">
+        <img src="{% static 'core/media/blog.svg' %}"></img>
+        <span>Blog</span>
+    </div>
+</a>
+<a href="{% url 'core:podcast' %}">
+    <div class="mobile-menu-item">
+        <img src="{% static 'core/media/podcast.svg' %}"></img>
+        <span>Podcast</span>
+    </div>
+</a>
+<a href="#">
+    <div class="mobile-menu-item">
+        <img src="{% static 'core/media/shop.svg' %}"></img>
+        <span>Shop</span>
+    </div>
+</a>
 {% endblock mobilemenu %}
 
 {% block page %}
