--- a/core/static/core/podcast.css
+++ b/core/static/core/podcast.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #ffffff;
+    background-color: #dddddd;
     overflow: hidden;
     overflow-y: scroll;
     position: relative;
