--- a/static/core/base.css
+++ b/static/core/base.css
@@ -89,7 +89,7 @@ nav {
     font-family: Josefin Sans;
     font-size: 13px;
     color: #ffffff;
-    background-color: #4b6cff;
+    background-color: #168dd9;
     border-radius: 4px;
     border: none;
     padding: 3px 10px;
