--- a/static/core/blog.css
+++ b/static/core/blog.css
@@ -145,7 +145,7 @@ button {
         margin: 30px 1vw 70px 1vw;
     }
     #blogs {
-        grid-template-columns: 1fr;
+        grid-template-columns: 1fr 1fr;
         grid-gap: 20px;
         margin: 30px 0 0 0;
     }
