--- a/core/static/core/blog.css
+++ b/core/static/core/blog.css
@@ -149,6 +149,9 @@ button {
         grid-gap: 20px;
         margin: 30px 0 0 0;
     }
+    .blogtitle {
+        font-size: medium;
+    }
 }
 
 /* Footer */
