--- a/static/core/homepage.css
+++ b/static/core/homepage.css
@@ -125,71 +125,23 @@ a, a:hover {
     color: #ffd900;
     cursor: pointer;
 }
-
-#bio {
-    position: absolute;
-    bottom: 10%;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-}
-#bio p {
-    font-family: Josefin Sans;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 1rem;
-    text-decoration: none;
-    color: #ffffffc4;
-}
 .image {
     position: absolute;
     bottom: 4%;
     width: 100%;
     display: flex;
-    /* place-items: center; */
+    place-items: center;
     align-items: center;
     justify-content: center;
+    text-align: center;
 }
 .image > img {
     max-width: 5em;
     opacity: 0.7;
 }
-.feedbackBtn {
-    cursor: pointer;
-    display: inline;
-    position: absolute;
-    bottom: 7%;
-    right: -3%;
-    border: none;
-    border-radius: 4px 4px;
-    padding: 7px 10px 12px 10px;
-    background-color: #000000b7;
-    color: #ffffff;
-    font-family: CrimsonPro;
-    font-size: 14px;
-    font-weight: normal;
-    z-index: 2;
-    -webkit-transform: rotate(-90deg);
-    -moz-transform: rotate(-90deg);
-    -o-transform: rotate(-90deg);
-    transform: rotate(-90deg);
-}
 
 @media screen and (max-width: 770px) { 
     .image > img {
         max-width: 4em;
-    }
-    .feedbackBtn {
-        bottom: 20%;
-        right: -8%;
-    }
-}
-@media screen and (max-width: 480px) {
-    .feedbackBtn {
-        bottom: 20%;
-        right: -11%;
     }
 }
