--- a/core/templates/core/articlelayout.html
+++ b/core/templates/core/articlelayout.html
@@ -89,7 +89,7 @@
                 <div style="display: flex; flex-direction: row; justify-content: space-between; width: 40%;">
 
                     <a href="#sharenow" class="stat" style="position: relative; cursor: pointer;">
-                        <img id="sharebtn" src="{% static 'core/media/share_black.png' %}" alt="share article" width="20" height="20" >
+                        <img id="likebtn" src="{% static 'core/media/like.svg' %}" alt="like article" width="20" height="20" >
                         <span class="stats">0</span>
                     </a>
                     <div class="stat">
