--- a/static/core/blog.css
+++ b/static/core/blog.css
@@ -131,9 +131,9 @@ button {
     }
 }
 
-@media only screen and (max-width: 769px) {
+@media only screen and (max-width: 810px) {
     #blogs {
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
         grid-gap: 18px;
     }
     .articlesec {
@@ -146,6 +146,19 @@ button {
     }
     #blogs {
         grid-template-columns: 1fr 1fr;
+        grid-gap: 20px;
+        margin: 30px 0 0 0;
+    }
+    .blogtitle {
+        font-size: medium;
+    }
+}
+@media only screen and (max-width: 375px) {
+    .blogpage {
+        margin: 30px 1vw 70px 1vw;
+    }
+    #blogs {
+        grid-template-columns: 1fr;
         grid-gap: 20px;
         margin: 30px 0 0 0;
     }
