--- a/core/static/core/blog.css
+++ b/core/static/core/blog.css
@@ -125,50 +125,7 @@ button {
     margin: 30px 0;
 }
 
-@media only screen and (max-width: 1027) {
-    #blogs {
-        grid-template-columns: 1fr 1fr 1fr;
-    }
-}
-
-@media only screen and (max-width: 810px) {
-    #blogs {
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-gap: 18px;
-    }
-    .articlesec {
-        filter: none;
-    }
-}
-@media only screen and (max-width: 500px) {
-    .blogpage {
-        margin: 30px 1vw 70px 1vw;
-    }
-    #blogs {
-        grid-template-columns: 1fr 1fr;
-        grid-gap: 20px;
-        margin: 30px 0 0 0;
-    }
-    .blogtitle {
-        font-size: medium;
-    }
-}
-@media only screen and (max-width: 375px) {
-    .blogpage {
-        margin: 30px 1vw 70px 1vw;
-    }
-    #blogs {
-        grid-template-columns: 1fr;
-        grid-gap: 20px;
-        margin: 30px 0 0 0;
-    }
-    .blogtitle {
-        font-size: medium;
-    }
-}
-
 /* Footer */
-
 footer {
     border-top: 1px solid silver;
     display: flex;
@@ -188,10 +145,49 @@ footer a:hover {
     font-size: 11px;
     text-decoration: none;
 }
-@media screen and (max-width: 769px) {
+
+/** For tablet devices **/
+@media only screen and (max-width: 810px) {
+    #blogs {
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-gap: 18px;
+        margin: 30px 0 0 0;
+    }
+    .articlesec {
+        filter: none;
+    }
+}
+
+/** For mobile devices **/
+@media only screen and (max-width: 500px) {
+    .blogpage {
+        margin: 30px 1vw 70px 1vw;
+    }
+    #blogs {
+        grid-template-columns: 1fr 1fr;
+        grid-gap: 20px;
+        margin: 30px 0 0 0;
+    }
+    .blogtitle {
+        font-size: medium;
+    }
     footer {
         padding: 3% 1%;
         flex-direction: column;
         grid-gap: 10px;
+    }
+}
+
+@media only screen and (max-width: 375px) {
+    .blogpage {
+        margin: 30px 1vw 70px 1vw;
+    }
+    #blogs {
+        grid-template-columns: 1fr;
+        grid-gap: 20px;
+        margin: 30px 0 0 0;
+    }
+    .blogtitle {
+        font-size: medium;
     }
 }
