--- a/core/templates/core/articlelayout.html
+++ b/core/templates/core/articlelayout.html
@@ -88,10 +88,10 @@
                 <hr style="border-top: 1px #000 solid; padding: 0% 20%; margin: 0;"/>
                 <div style="display: flex; flex-direction: row; justify-content: space-between; width: 40%;">
 
-                    <a href="#sharenow" class="stat" style="position: relative; cursor: pointer;">
+                    <!-- <a class="stat" style="position: relative; cursor: pointer;">
                         <img id="likebtn" src="{% static 'core/media/like.svg' %}" alt="like article" width="20" height="20" >
                         <span class="stats">0</span>
-                    </a>
+                    </a> -->
                     <div class="stat">
                         <img src="{% static 'core/media/view_black.png' %}" alt="reads" width="20" height="20" >
                         <span class="stats">{{ article.viewsCount }}</span>
