--- a/core/templates/core/homepage.html
+++ b/core/templates/core/homepage.html
@@ -54,7 +54,7 @@
                 <section>
                     <div id="links">
                         <!-- <a href="https://soundcloud.com/lerb-fanbase" target="_blank" >MIXES</a> -->
-                        <a href="https://ra.co/dj/lerb/" target="_blank" >TOURS</a>
+                        <a href="https://ra.co/dj/lerb/" target="_blank" >TICKETS</a>
                         <a href="{% url 'core:blog' %}">BLOG</a>
                         <a href="{% url 'core:podcast' %}">PODCAST</a>
                         <a href="#" style="text-decoration: line-through;">SHOP</a>
