--- a/core/templates/core/homepage.html
+++ b/core/templates/core/homepage.html
@@ -53,8 +53,7 @@
             <div class="content">
                 <section>
                     <div id="links">
-                        <!-- <a href="https://soundcloud.com/lerb-fanbase" target="_blank" >MIXES</a> -->
-                        <a href="https://ra.co/dj/lerb/" target="_blank" >TICKETS</a>
+                        <a href="#" style="text-decoration: line-through;">TICKETS</a>
                         <a href="{% url 'core:blog' %}">BLOG</a>
                         <a href="{% url 'core:podcast' %}">PODCAST</a>
                         <a href="#" style="text-decoration: line-through;">SHOP</a>
