--- a/static/core/blog.css
+++ b/static/core/blog.css
@@ -147,7 +147,7 @@ footer a:hover {
 }
 
 /** For tablet devices **/
-@media only screen and (max-width: 810px) {
+@media screen and (max-width: 810px) and (min-width: 721px) {
     #blogs {
         grid-template-columns: 1fr 1fr 1fr;
         grid-gap: 18px;
@@ -159,7 +159,7 @@ footer a:hover {
 }
 
 /** For mobile devices **/
-@media only screen and (max-width: 500px) {
+@media screen and (max-width: 720px) and (min-width: 320px) {
     .blogpage {
         margin: 30px 1vw 70px 1vw;
     }
@@ -169,7 +169,7 @@ footer a:hover {
         margin: 30px 0 0 0;
     }
     .blogtitle {
-        font-size: medium;
+        font-size: 14px;
     }
     footer {
         padding: 3% 1%;
@@ -178,7 +178,7 @@ footer a:hover {
     }
 }
 
-@media only screen and (max-width: 375px) {
+@media screen and (max-width: 319px) {
     .blogpage {
         margin: 30px 1vw 70px 1vw;
     }
