--- a/core/templates/core/articlelayout.html
+++ b/core/templates/core/articlelayout.html
@@ -178,7 +178,7 @@
         <a href="{% url 'account:auth' %}"><button>Please log in or sign up to comment</button></a>
         {% endif %}
 
-        {% if article.comments.count = 1 %}
+        {% if article.comments.count == 1 %}
         <p class="responses">{{ article.comments.count }} response</h5>
         {% else %}
         <p class="responses">{{ article.comments.count }} responses</h5>
