--- a/core/templates/core/podcast.html
+++ b/core/templates/core/podcast.html
@@ -16,6 +16,12 @@
 {% endblock navmenu %}
 
 {% block mobilemenu %}
+<a href="{% url 'core:events' %}">
+    <div class="mobile-menu-item">
+        <img src="{% static 'core/media/tickets.svg' %}"></img>
+        <span>Tickets</span>
+    </div>
+</a>
 <a href="{% url 'core:blog' %}">
     <div class="mobile-menu-item">
         <img src="{% static 'core/media/blog.svg' %}"></img>
