--- a/static/core/blog.css
+++ b/static/core/blog.css
@@ -20,10 +20,27 @@
 .blogpage {
     margin: 40px 1vw 30vh 1vw;
 }
-.blogpage .centered {
+.centered {
     width: 100%;
     display: grid;
     place-items: center;
+}
+.pageheader {
+    color: #fff;
+    font-family: CrimsonPro;
+    font-size:40px;
+    font-weight: bold;
+    text-align: center;
+    line-height: 1rem;
+    margin-top: 1rem;
+}
+.pagesubheader {
+    color: #8d8d8d;
+    font-size: medium;
+    font-weight: lighter;
+    text-align: center;
+    line-height: 1rem;
+    margin-top: 12px;
 }
 #blogs {
     display: grid;
