--- a/static/core/events.css
+++ b/static/core/events.css
@@ -17,18 +17,14 @@
 .pagebody {
     background: #000;
     width:100%;
-    height:100%;
-    overflow:auto;
+    height: 100vh;
+    position: relative;
 }
 .eventpage {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: #ffffff;
-    min-width: 300px;
-    padding: 30px 20px;
-    border-radius: 8px;
+    display: grid;
+    place-content: center;
+    padding: 40vh 0;
+    overflow: hidden;
 }
 .centered {
     width: 100%;
@@ -41,6 +37,41 @@
     font-size:40px;
     font-weight: bold;
     text-align: center;
-    line-height: 1rem;
     margin-top: 1rem;
+}
+
+/* Footer */
+footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    border-top: 1px solid silver;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1% 2%;
+    clear: both;
+}
+#footersocial {
+    display: flex;
+    grid-gap: 10px;
+}
+footer a,
+footer a:hover {
+    color: #fff;
+    font-size: 11px;
+    text-decoration: none;
+}
+
+/** For mobile devices **/
+@media screen and (max-width: 720px) and (min-width: 320px) {
+    /* .eventpage {
+    } */
+    footer {
+        position: sticky;
+        padding: 3% 1%;
+        flex-direction: column;
+        grid-gap: 10px;
+    }
 }
