--- a/core/static/core/events.css
+++ b/core/static/core/events.css
@@ -66,10 +66,10 @@ footer a:hover {
 
 /** For mobile devices **/
 @media screen and (max-width: 720px) and (min-width: 320px) {
-    /* .eventpage {
-    } */
+    .eventpage {
+        padding: 30vh 0;
+    }
     footer {
-        position: sticky;
         padding: 3% 1%;
         flex-direction: column;
         grid-gap: 10px;
