--- a/core/templates/core/events.html
+++ b/core/templates/core/events.html
@@ -26,7 +26,7 @@
 {% endblock head %}
 
 {% block navmenu %}
-<a id="menuactive">BLOG</a>
+<a id="{% url 'core:blog' %}">BLOG</a>
 <a href="{% url 'core:podcast' %}">PODCAST</a>
 <a href="#">SHOP</a>
 {% endblock navmenu %}
