touch store app dependancies

--- a/core/templates/core/podcast.html
+++ b/core/templates/core/podcast.html
@@ -34,7 +34,7 @@
         <span>Podcast</span>
     </div>
 </a>
-<a href="#">
+<a href="{% url 'store:catalogue' %}">
     <div class="mobile-menu-item">
         <img src="{% static 'core/media/shop.svg' %}"></img>
         <span>Shop</span>
