--- a/core/templates/core/homepage.html
+++ b/core/templates/core/homepage.html
@@ -56,7 +56,7 @@
                         <a href="{% url 'core:events' %}">TICKETS</a>
                         <a href="{% url 'core:blog' %}">BLOG</a>
                         <a href="{% url 'core:podcast' %}">PODCAST</a>
-                        <a href="#" style="text-decoration: line-through;">SHOP</a>
+                        <a href="{% url 'store:catalogue' %}">SHOP</a>
                         {% if user.is_authenticated %}
                         <a href="{% url 'account:logout' %}">LOG OUT</a>
                         {% else %}
