--- a/core/static/core/articlelayout.css
+++ b/core/static/core/articlelayout.css
@@ -111,6 +111,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: space-between;
     margin: 7px 4px;
     grid-gap: 7px;
 }
