catalogue ux mod

--- a/store/templates/store/catalogue.html
+++ b/store/templates/store/catalogue.html
@@ -61,7 +61,7 @@
 {% block page %}
 <div class="eventpage">
     <div class="centered">
-        <p class="pageheader">NO ITEMS AVAILABLE</p>
+        <p class="pageheader">COMING SOON</p>
     </div>
 </div>
 {% endblock page %}
