--- a/staticfiles/core/podcast.css
+++ b/staticfiles/core/podcast.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #dddddd;
+    background-color: #9AB8BA;
     overflow: hidden;
     overflow-y: scroll;
     position: relative;
