--- a/staticfiles/core/podcast.css
+++ b/staticfiles/core/podcast.css
@@ -1,6 +1,6 @@
 body {
-    background: #045256;
-    /* background-color: #9AB8BA; */
+    /* background: #045256; */
+    background: #9AB8BA;
     overflow: hidden;
     overflow-y: scroll;
     position: relative;
