--- a/core/templates/core/articlelayout.html
+++ b/core/templates/core/articlelayout.html
@@ -44,7 +44,7 @@
 <!-- <a href="{% url 'core:index' %}">HOME</a> -->
 <a href="{% url 'core:blog' %}">BLOG</a>
 <a href="{% url 'core:podcast' %}">PODCAST</a>
-<a href="#">SHOP</a>
+<a href="{% url 'store:catalogue' %}">SHOP</a>
 {% endblock navmenu %}
 
 {% block mobilemenu %}
