--- a/core/templates/core/events.html
+++ b/core/templates/core/events.html
@@ -26,7 +26,7 @@
 {% endblock head %}
 
 {% block navmenu %}
-<a id="{% url 'core:blog' %}">BLOG</a>
+<a href="{% url 'core:blog' %}">BLOG</a>
 <a href="{% url 'core:podcast' %}">PODCAST</a>
 <a href="#">SHOP</a>
 {% endblock navmenu %}
@@ -59,22 +59,7 @@
 {% endblock mobilemenu %}
 
 {% block page %}
-<div class="eventpage">
-    <div class="centered">
-        <p class="pageheader">NO UPCOMING EVENTS</p>
-    </div>
-</div>
+<section>
+    <p class="title">NO UPCOMING EVENTS</p>
+</section>
 {% endblock page %}
-
-{% block footer %}
-<footer>
-    <div id="footersocial">
-        <a href="https://twitter.com/leroybuliro/" target="_blank"><img src="{% static 'core/media/iconTT.png' %}" alt="twitter" width="auto" height="22" ></a>
-        <a href="https://instagram.com/leroybuliro/" target="_blank"><img src="{% static 'core/media/iconIG.png' %}" alt="instagram" width="auto" height="22" ></a>
-    </div>
-    <a style="color: #fff;">© 2022 Leroy Buliro. All rights reserved.</a>
-    <span>
-        <a href="{% url 'core:legal' %}" style="color: #fff;">Legal</a>
-    </span>
-</footer>
-{% endblock footer %}
