--- a/staticfiles/store/catalogue.css
+++ b/staticfiles/store/catalogue.css
@@ -13,31 +13,25 @@
     src: url('/static/core/fonts/PermanentMarker-Regular.ttf') format('truetype');
     font-weight: 700;
 }
-
 .pagebody {
     background: #000;
-    width:100%;
     height: 100vh;
-    position: relative;
 }
-.eventpage {
-    display: grid;
-    place-content: center;
-    padding: 40vh 0;
-    overflow: hidden;
+::-webkit-scrollbar {
+    display: none;
 }
-.centered {
-    width: 100%;
+section {
+    min-height: calc(100vh - 34px);
     display: grid;
     place-items: center;
 }
-.pageheader {
-    color: #fff;
+.title {
+    width: 100%;
     font-family: CrimsonPro;
     font-size:40px;
     font-weight: bold;
     text-align: center;
-    margin-top: 1rem;
+    color: #fff;
 }
 
 /* Footer */
@@ -65,9 +59,6 @@ footer a:hover {
 
 /** For mobile devices **/
 @media screen and (max-width: 720px) and (min-width: 320px) {
-    .eventpage {
-        padding: 30vh 0;
-    }
     footer {
         padding: 3% 1%;
         flex-direction: column;
