--- a/core/templates/core/articlelayout.html
+++ b/core/templates/core/articlelayout.html
@@ -25,7 +25,6 @@
 <meta property="og:image:height" content="500">
 
 <link rel="stylesheet" href="{% static 'core/articlelayout.css' %}">
-<link rel="stylesheet" href="{% static 'core/feedbackModal.css' %}">
 
 <script>
     document.addEventListener('DOMContentLoaded', ()=> {
@@ -155,10 +154,8 @@
         </div>
         {% endfor %}
     {% endif %}
-    </div>
-        
+    </div> 
 </div>
-
 {% if user.is_authenticated %}
 <div id="id02" class="Cmodal">
     
@@ -189,52 +186,15 @@
 </div>
 {% endif %}
 
-<div id="id01" class="modal">
-    
-    <div class="modal-content" style="max-width:600px">
-        
-        <div style="padding: 0.01em;">
-            <p style="text-align: left; color: #000; font-size: x-large; font-weight: bold;">What's on your mind?</p>
-            <span onclick="document.getElementById('id01').style.display='none'" class="modal-close-btn" title="Close">&times;</span>
-        </div>
-        
-        <form class="modal-container" method="POST" action="">{% csrf_token %}
-            <div class="modal-section">
-                <div>
-                    <textarea rows="4" type="text" style="width: 100%; padding: 4px; font-size: 14px; font-family: CrimsonPro;" placeholder="We appreciate hearing your thoughts. It helps us make things better." name="content" required></textarea>
-                    <p style="color: #929292; font-size: small;">0/500 maximum characters.</p>
-                </div>
-
-                <div>
-                    <p><b>Overall, how was your experience?</b></p>
-                    <div class="rating">
-                        <span><input type="radio" name="ratings" id="str5" value="5"><label for="str5">&star;</label></span>
-                        <span><input type="radio" name="ratings" id="str4" value="4"><label for="str4">&star;</label></span>
-                        <span><input type="radio" name="ratings" id="str3" value="3"><label for="str3">&star;</label></span>
-                        <span><input type="radio" name="ratings" id="str2" value="2"><label for="str2">&star;</label></span>
-                        <span><input type="radio" name="ratings" id="str1" value="1"><label for="str1">&star;</label></span>
-                    </div>
-                </div>
-
-                <p>To protect your privacy, don't include your contact info.</p>
-
-                <div style="display: flex; justify-content: right; padding-top: 12px;">
-                    <button class="modal-btn-alt" type="submit" name="submitfeedback">Submit</button>
-                    <button class="modal-btn" onclick="document.getElementById('id01').style.display='none'" type="button">Cancel</button>
-                </div>
-            </div>
-        </form>
-
-    </div>
-</div>
 {% endblock page %}
 
 {% block footer %}
 <footer>
-    <div id="footersocial">
+    <!-- <div id="footersocial">
         <a href="https://twitter.com/leroybuliro/" target="_blank"><img src="{% static 'core/media/iconTT.png' %}" alt="twitter" width="auto" height="22" ></a>
         <a href="https://instagram.com/leroybuliro/" target="_blank"><img src="{% static 'core/media/iconIG.png' %}" alt="instagram" width="auto" height="22" ></a>
-    </div>
+    </div> -->
+    <span onclick="document.getElementById('id01').style.display='block'" style="color: #168dd9;">Send Feedback on web experience</span>
     <a style="color: #fff;">© 2022 Leroy Buliro. All rights reserved.</a>
     <span>
         <a href="{% url 'core:legal' %}" style="color: #fff;">Legal</a>
