--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -9,6 +9,7 @@
         {% block head %}
         {% endblock head %}
         <link rel="stylesheet" href="{% static 'core/base.css' %}"/>
+        <link rel="stylesheet" href="{% static 'core/feedbackModal.css' %}">
         <script src="{% static 'core/main.js' %}"></script>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
         <script type="application/ld+json">
@@ -53,7 +54,7 @@
                 {% if user.is_authenticated %}
                 <a class="accessbtn" href="{% url 'account:logout' %}">LOG OUT</a>
                 {% else %}
-                <a class="accessbtn" href="{% url 'account:auth' %}">SIGN IN</a>
+                <a class="accessbtn" href="{% url 'account:auth' %}">INSIDERS</a>
                 {% endif %}
             </div>
             
@@ -64,6 +65,38 @@
         
         {% block page %}
         {% endblock page %}
+
+        <div id="id01" class="modal">
+            <div class="modal-content" style="max-width:600px"> 
+                <div style="padding: 0.01em;">
+                    <p style="text-align: left; color: #000; font-size: x-large; font-weight: bold;">What's on your mind?</p>
+                    <span onclick="document.getElementById('id01').style.display='none'" class="modal-close-btn" title="Close">&times;</span>
+                </div>
+                <form class="modal-container" method="POST" action="">{% csrf_token %}
+                    <div class="modal-section">
+                        <div>
+                            <textarea rows="4" type="text" style="width: 100%; padding: 4px; font-size: 14px; font-family: CrimsonPro;" placeholder="We appreciate hearing your thoughts. It helps us make things better." name="content" required></textarea>
+                            <p style="color: #929292; font-size: small;">0/500 maximum characters.</p>
+                        </div>
+                        <div>
+                            <p><b>Overall, how was your experience?</b></p>
+                            <div class="rating">
+                                <span><input type="radio" name="ratings" id="str5" value="5"><label for="str5">&star;</label></span>
+                                <span><input type="radio" name="ratings" id="str4" value="4"><label for="str4">&star;</label></span>
+                                <span><input type="radio" name="ratings" id="str3" value="3"><label for="str3">&star;</label></span>
+                                <span><input type="radio" name="ratings" id="str2" value="2"><label for="str2">&star;</label></span>
+                                <span><input type="radio" name="ratings" id="str1" value="1"><label for="str1">&star;</label></span>
+                            </div>
+                        </div>
+                        <p>To protect your privacy, don't include your contact info.</p>
+                        <div style="display: flex; justify-content: right; padding-top: 12px;">
+                            <button class="modal-btn-alt" type="submit" name="submitfeedback">Submit</button>
+                            <button class="modal-btn" onclick="document.getElementById('id01').style.display='none'" type="button">Cancel</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
         
         {% block footer %}
         {% endblock footer %}
