--- a/core/templates/core/blog.html
+++ b/core/templates/core/blog.html
@@ -136,7 +136,7 @@
         {% if articles %}
         <div id="blogs">
             {% for article in articles %}
-            <section class="articlediv" style="border: 1px solid #ccc; border-radius: 2%;">
+            <section class="articlediv" style="border: 1px solid #ccc; border-radius: 2%; display: flex; flex-direction: column; grid-gap: 10px;">
                 <a class="articlesec" href="{% url 'core:article' pk=article.id slug=article.slug %}">                    
                     <div class="image">
                         {% if article.featureimageURI %}
@@ -170,10 +170,11 @@
 
 {% block footer %}
 <footer>
-    <div id="footersocial">
+    <!-- <div id="footersocial">
         <a href="https://twitter.com/leroybuliro/" target="_blank"><img src="{% static 'core/media/iconTT.png' %}" alt="twitter" width="auto" height="22" ></a>
         <a href="https://instagram.com/leroybuliro/" target="_blank"><img src="{% static 'core/media/iconIG.png' %}" alt="instagram" width="auto" height="22" ></a>
-    </div>
+    </div> -->
+    <span onclick="document.getElementById('id01').style.display='block'" style="color: #168dd9;">Send Feedback on web experience</span>
     <a style="color: #fff;">© 2022 Leroy Buliro. All rights reserved.</a>
     <span>
         <a href="{% url 'core:legal' %}" style="color: #fff;">Legal</a>
