--- a/core/templates/core/podcast.html
+++ b/core/templates/core/podcast.html
@@ -56,9 +56,9 @@
                     <a href="https://podcasts.apple.com/us/podcast/kubonga-show/id1470474649" target="_blank">
                         <img src="{% static 'core/media/appleBadge.svg' %}"/>                        
                     </a>
-                    <a href="https://open.spotify.com/show/2yUYmMbNJ2aXWDPoHF6P7D" target="_blank">
+                    <!-- <a href="https://open.spotify.com/show/2yUYmMbNJ2aXWDPoHF6P7D" target="_blank">
                         <img src="{% static 'core/media/spotifyBadge.svg' %}"/>
-                    </a>
+                    </a> -->
                     <a href="https://music.amazon.com/podcasts/8317c891-dcea-4579-ba90-5391e8e3a176/kubonga-show" target="_blank">
                         <img src="{% static 'core/media/amazonBadge.svg' %}"/>
                     </a>
