--- a/core/templates/core/articlelayout.html
+++ b/core/templates/core/articlelayout.html
@@ -194,7 +194,9 @@
         <a href="https://twitter.com/leroybuliro/" target="_blank"><img src="{% static 'core/media/iconTT.png' %}" alt="twitter" width="auto" height="22" ></a>
         <a href="https://instagram.com/leroybuliro/" target="_blank"><img src="{% static 'core/media/iconIG.png' %}" alt="instagram" width="auto" height="22" ></a>
     </div> -->
-    <span onclick="document.getElementById('id01').style.display='block'" style="color: #168dd9;">Send Feedback on web experience</span>
+    <span>
+        <a onclick="document.getElementById('id01').style.display='block'" style="color: #168dd9;cursor: pointer;">Send Feedback on web experience</a>
+    </span>
     <a style="color: #fff;">© 2022 Leroy Buliro. All rights reserved.</a>
     <span>
         <a href="{% url 'core:legal' %}" style="color: #fff;">Legal</a>
